Fix broken LLINT_SLOW_PATH_TRACING build. https://bugs.webkit.org/show_bug.cgi?id=166463

Reviewed by Keith Miller.

* llint/LLIntExceptions.cpp:
(JSC::LLInt::returnToThrow):
(JSC::LLInt::callToThrow):
* runtime/CommonSlowPathsExceptions.cpp:
(JSC::CommonSlowPaths::interpreterThrowInCaller):


Canonical link: https://commits.webkit.org/183740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210136 268f45cc-cd09-0410-ab3c-d52691b4dbfc